--- a/deli-user-creation-api/.gitignore
+++ b/deli-user-creation-api/.gitignore
@@ -1,1 +1,12 @@
 .venv
+.env
+
+__pycache__/
+__pycache__/*
+
+services/__pycache__/*
+routers/__pycache__/*
+repositories/__pycache__/*
+config/__pycache__/*
+utils/__pycache__/*
+```
