feat(testing variables for prod)

--- a/deli-user-creation-api/.env.example
+++ b/deli-user-creation-api/.env.example
@@ -1,5 +1,5 @@
-MONGO_DB_URL = <MONGO_DB_URL>
-MONGO_DB_NAME = <MONGO_DB_NAME>
+MONGO_DB_URL = "mongodb+srv://deli-user-creation:<password>@deli-cluster.hufqvre.mongodb.net/?retryWrites=true&w=majority"
+MONGO_DB_NAME = "deli-db"
 
-MAILGUN_API_KEY = <MAILGUN_API_KEY>
-MAILGUN_DOMAIN = <MAILGUN_DOMAIN>
+MAILGUN_API_KEY = "7ddfe52358b4b79f5faf835e493ee2ed-8c90f339-e2f222bd"
+MAILGUN_DOMAIN = "sandboxe283434e2ff842318c4af17ca2b535f3.mailgun.org"
